# PWD-Tools-Genspark

./: .gitignore  BUG_REMOVAL_OPTIMIZATION_REPORT.md  BUG_REMOVAL_REPORT.md  CODEPEN_FINANCIAL_ANALYSIS_IMPLEMENTATION.md  COMPREHENSIVE_TESTING_REPORT.md  CORRECTED_TOOL_LINKING_REPORT.md  DEMO_SUMMARY.md  DEPLOYMENT_FIX.md  DEPLOYMENT_READY_REPORT.md  DEPLOYMENT_REPORT.md  DEPLOYMENT_SUMMARY.md  DEPLOY_TO_REMOTE.md  EMD_REFUND_HTML_IMPLEMENTATION.md  EMD_REFUND_IMPLEMENTATION_SUMMARY.md  EMD_REFUND_INTERFACE_ENHANCEMENT.md  EMD_REFUND_UPDATE_SUMMARY.md  FINAL_DEPLOYMENT_REPORT.md  FINANCIAL_ANALYSIS_WEB_TOOL_IMPLEMENTATION.md  FIX_SUMMARY.md  GITHUB_README.md  HOW_TO_RUN.md  HYDRAULICS_DESIGN_ESTIMATE_REPORT.md  INSTALL_DEPS.bat  LANDING_PAGE_BEAUTIFICATION_SUMMARY.md  LANDING_PAGE_FIX_REPORT.md  MAIN_LANDING_PAGE_UPDATE_REPORT.md  NEW_TOOLS_ADDITION_REPORT.md  PROJECT_COMPLETION_SUMMARY.md  README.md  README_COMPLETE.md  README_HINDI_BILL.md  README_RAJKUMAR.md  README_SIMPLE.md  SCREENSHOT_GENERATION.md  SCREENSHOT_GENERATION_REPORT.md  SCREEN_DEMO.md  SIMPLE_TOOLS_README.md  START_APP.bat  STREAMLIT_APP_UPDATE_REPORT.md  STREAMLIT_CLOUD_DEPLOYMENT.md  (+132 more)
Bridge_GAD_Yogendra_Borse-main/: .coveragerc  .gitignore  ACTION PLAN FOR OPTIMISATION.txt  APPLY_INSTRUCTIONS_TO_ALL_APPS.ps1  AUTO_BUILD_README.md  AUTO_RELEASE_SUMMARY.md  BRANDING_README.md  BRIDGE_GAD_v2.0_RELEASE_MANUAL.md  BRIDGE_ISSUES_RESOLVED.md  BRILLIANT_OUTPUT_FIXES.ps1  BUILD_INSTRUCTIONS.md  Bridge_GAD.spec  Bridge_GAD_GUI.spec  Bridge_GAD_Installer.iss  Bridge_GAD_Test.spec  COMPLETION_SUMMARY.md  (+145 more)
(+248 files in other folders)
